Revision history for Catalyst-View-ByCode

        2011-05-03
        * enabled objects that have a ->render() method to appear inside
          a template {} code block.

0.15    2011-05-03
        * made doctype 'html' act as expected: <!doctype html>
        * changed doctype 'html' as the default if no argument is given
        * added a 'boilerplate' pseudo-tag
          that generates a html-boilerplate-like <html> tag
          see http://html5boilerplate.com
        
        2011-01-02
        * added HTML5 as doctype
        * changed AutoPrereqs in dist.ini to avoid deprecacy warning
        
        2011-01-20
        * allowed block_content() to forward arguments into the code-block called.

0.14    2010-12-09
        * fixed a false escaping of render()'ed content from eg. FormFu
        * removed some typos
        * added more tests
        
0.13    2010-12-09
        * increased version number due to a CPAN upload problem
        
0.12    2010-12-08
        * complete rewrite of the whole rendering code
          using simple structures instead of Moose for performance
          changed speed for readability

        2010-06-30
        * changed some parts of markup generation to inline code for speedup

0.11    2010-04-06
        * changed parameters transfered from process() to render() as
          actions with :Args() fail otherwise
        * added a test for this.
         
        2010-04-08
        * added documentation

        2010-04-15
        * $VERSION is now generated from Dist::Zilla 
        
        2010-05-27
        * added a rudimentary html5 doctype

0.10    2010-04-01
        * bumped MooseX::AttributeHelpers to Version 0.23, as 0.22 fails
          Thanks, CPAN Testers!
        * tried Dist::Zilla as a packaging system -- looks much easier to use.
        * split up the process() method into render() and delivery to allow
          my $html = $c->forward('View::ByCode', render => [qw(list of files)]);